Release history for swall

v17.10  2017-10-10
  - Initial release.
  - Set root wallpaper and handle the three most common cases.